[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/enemies-sprites/turret-base.png" type="Texture" id=1]
[ext_resource path="res://sprites/enemies-sprites/turret-barrel.png" type="Texture" id=2]
[ext_resource path="res://scripts/turret-barrel-rotation.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 4.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 4.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 1.5 )

[sub_resource type="Animation" id=4]
resource_name = "shoot"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sprite2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 96, 64 )

[node name="mounted-turret" type="StaticBody2D"]

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, 4.5 )
texture = ExtResource( 1 )

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.5 )
shape = SubResource( 1 )

[node name="bullet-detection" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 4.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="collider2" type="CollisionShape2D" parent="bullet-detection"]
shape = SubResource( 2 )

[node name="collider3" type="CollisionShape2D" parent="bullet-detection"]
position = Vector2( 0, -3 )
shape = SubResource( 3 )

[node name="barrel-rotation" type="Position2D" parent="."]
position = Vector2( 0, 4.5 )
script = ExtResource( 4 )

[node name="barrel-rotation2" type="Position2D" parent="barrel-rotation"]
rotation = -1.5708

[node name="barrel-position" type="Position2D" parent="barrel-rotation/barrel-rotation2"]
position = Vector2( 0, 5.5 )

[node name="animator" type="AnimationPlayer" parent="barrel-rotation/barrel-rotation2/barrel-position"]
anims/shoot = SubResource( 4 )

[node name="sprite2" type="Sprite" parent="barrel-rotation/barrel-rotation2/barrel-position"]
position = Vector2( 0, 5 )
texture = ExtResource( 2 )
hframes = 2
frame = 1

[node name="muzzle-position" type="Position2D" parent="barrel-rotation/barrel-rotation2/barrel-position/sprite2"]
position = Vector2( 0, 4.5 )

[node name="player-detection" type="Area2D" parent="."]
collision_layer = 32

[node name="collider" type="CollisionShape2D" parent="player-detection"]
position = Vector2( 0, 64 )
shape = SubResource( 5 )

[connection signal="body_entered" from="player-detection" to="barrel-rotation" method="_on_playerdetection_body_entered"]
[connection signal="body_exited" from="player-detection" to="barrel-rotation" method="_on_playerdetection_body_exited"]
